Squashed commit of the following:
commit 59bd0d39c469bf7fdda89158d45ee3773f61d78d
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Fri Aug 8 18:06:56 2025 +0100

    Tidy up

commit c4cd21b7af85f64cf944564d6b7e07e236879181
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Fri Aug 8 16:02:25 2025 +0100

    Refactoring for maintainability

commit 4de31e2424249a9797be3ba3b8defb8e82d483d0
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Fri Aug 8 15:50:52 2025 +0100

    Fixed issue with array method parameters, added tests

commit 5a8ba30b58a559b1a693654d602e72a9b06da83c
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Fri Aug 8 10:59:47 2025 +0100

    Coding style improvements

commit ca4e57af39856f13dac7f2660965a04129e0d5a7
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Aug 7 23:20:52 2025 +0100

    MFLP-17 Documenting annotations

commit 3d10ab56d3be3f9359e83c0135ea1539198b229e
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Aug 7 15:14:40 2025 +0100

    Adding scanning of applied annotations. Refactoring model so that all type classes have Type in their name

commit 27478edf0a5fc178c26ab4f48737fae4e3bcb97f
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Aug 7 11:27:25 2025 +0100

    refactoring

commit 99624547189712f7968334098ad06970ef0504fd
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Wed Aug 6 22:54:25 2025 +0100

    MFLP-24 docTitle from Javadoc command now stoed in Api model

commit 17b3b96ec114b80c42d70b3220a1e4943f52dacf
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Wed Aug 6 17:51:10 2025 +0100

    Fixed warning

commit d5b018ccdb3c2b0aa5fc7a27a3effe21b2bdf58e
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Wed Aug 6 17:50:52 2025 +0100

    sprint12